--- a/webapp/ruby/Gemfile
+++ b/webapp/ruby/Gemfile
@@ -3,6 +3,7 @@ source "https://rubygems.org"
 
 gem "sinatra"
 gem "sinatra-contrib"
+gem "memcache-client"
 gem "foreman"
 gem "unicorn"
 gem "mysql2"
