Update Gemfile for procudtion

--- a/portal/Gemfile
+++ b/portal/Gemfile
@@ -1,7 +1,6 @@
 source 'https://rubygems.org'
 
 gem 'rails', '4.2.5'
-gem 'sqlite3'
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
@@ -21,14 +20,19 @@ gem 'bcrypt', '~> 3.1.7'
 # webserver
 gem 'thin'
 
+group :production do
+  gem 'mysql2'
+end
 
 group :development, :test do
+  gem 'sqlite3'
   gem 'byebug'
 end
 
 group :development do
   gem 'web-console', '~> 2.0'
   gem 'spring'
-  gem 'capistrano-rails', group: :development
+  gem 'capistrano-rails'
+  gem 'capistrano-thin', '~> 1.2.0'
 end
 
