--- a/ansible/roles/portal/tasks/mysql.yml
+++ b/ansible/roles/portal/tasks/mysql.yml
@@ -5,3 +5,11 @@
 - name: start mysql
   service: name=mysql state=running enabled=yes
 
+- name: setup mysql db
+  shell: mysql -uroot -e 'CREATE DATABASE IF NOT EXISTS {{ mysql_db }}'
+
+- name: setup mysql user
+  shell: |
+    mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'localhost' IDENTIFIED BY '{{ mysql_pass }}'"
+    mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'127.0.0.1' IDENTIFIED BY '{{ mysql_pass }}'"
+    mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'%' IDENTIFIED BY '{{ mysql_pass }}'"
