--- a/ansible/roles/portal/handlers/redis.yml
+++ b/ansible/roles/portal/handlers/redis.yml
@@ -3,5 +3,4 @@
   shell: /etc/init.d/redis-server reload
 
 - name: restart redis
-  shell: /etc/init.d/redis-server restart
-
+  shell: /etc/init.d/redis-server stop && /etc/init.d/redis-server start
