--- a/ansible/roles/portal/tasks/mysql.yml
+++ b/ansible/roles/portal/tasks/mysql.yml
@@ -11,5 +11,8 @@
 - name: setup mysql user
   shell: |
     mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'localhost' IDENTIFIED BY '{{ mysql_pass }}'"
-    mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'127.0.0.1' IDENTIFIED BY '{{ mysql_pass }}'"
     mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'%' IDENTIFIED BY '{{ mysql_pass }}'"
+
+- name: copy my.cnf
+  copy: src=mysql/my.cnf dest=/etc/mysql/my.cnf
+  notify: reload mysql
