--- a/ansible/roles/portal/tasks/redis.yml
+++ b/ansible/roles/portal/tasks/redis.yml
@@ -11,8 +11,8 @@
 
 - name: unbind 127.0.0.1
   lineinfile: dest=/etc/redis/redis.conf line="bind 127.0.0.1" state=absent
-  notify: reload redis
+  notify: restart redis
 
 - name: bind 0.0.0.0
   lineinfile: dest=/etc/redis/redis.conf line="bind 0.0.0.0" state=present
-  notify: reload redis
+  notify: restart redis
