--- a/provisioning/image/ansible/08_grub.yml
+++ b/provisioning/image/ansible/08_grub.yml
@@ -4,5 +4,5 @@
   become: yes
   tasks:
     - copy: src=../files/etc/default/grub dest=/etc/default/grub owner=root mode=644
-    - name: change timezone to JST
+    - name: update-grub2
       shell: update-grub2
