--- a/ansible/roles/portal/tasks/mysql.yml
+++ b/ansible/roles/portal/tasks/mysql.yml
@@ -17,3 +17,7 @@
     mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'localhost' IDENTIFIED BY '{{ mysql_pass }}'"
     mysql -uroot -e "GRANT ALL PRIVILEGES ON {{ mysql_db }}.* TO '{{ mysql_user }}'@'%' IDENTIFIED BY '{{ mysql_pass }}'"
     mysql -uroot -e "FLUSH PRIVILEGES"
+
+- name: copy my.cnf
+  copy: src=mysql/my.cnf dest=/etc/mysql/my.cnf
+  notify: restart mysql
