--- a/webapp/node/package.json
+++ b/webapp/node/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "bluebird": "^3.3.5",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "mysql": "^2.10.2",
+    "promise-mysql": "^1.3.2"
   }
 }
