--- a/webapp/php/config/php-fpm.conf
+++ b/webapp/php/config/php-fpm.conf
@@ -30,6 +30,7 @@
 ; Note: the default prefix is /usr/var
 ; Default Value: log/php-fpm.log
 ;error_log = log/php-fpm.log
+error_log = /tmp/php-fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
