--- a/webapp/node/package.json
+++ b/webapp/node/package.json
@@ -6,6 +6,7 @@
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.13.0",
+    "multer": "^1.1.0",
     "mysql": "^2.10.2",
     "promise-mysql": "^1.3.2"
   }
