--- a/provisioning/image/ansible/07_application.yml
+++ b/provisioning/image/ansible/07_application.yml
@@ -9,9 +9,19 @@
 
 - hosts: guests:extras
   become: yes
+  become_user: isucon
+  gather_facts: no
+  tasks:
+    - name: go build
+      shell: cd /home/isucon/private_isu/webapp/golang; bash -lc "./setup.sh"
+
+- hosts: guests:extras
+  become: yes
   tasks:
     - copy: src=../files/home/isucon/env.sh dest=/home/isucon/env.sh owner=isucon mode=644
     - name: ruby (systemd)
       copy: src=../files/etc/systemd/system/isu-ruby.service dest=/etc/systemd/system/isu-ruby.service owner=root mode=644
+    - name: go app (systemd)
+      copy: src=../files/etc/systemd/system/isu-go.service dest=/etc/systemd/system/isu-go.service owner=root mode=644
     - name: default application selection
       service: name=isu-ruby state=running enabled=true
