--- a/provisioning/image/files/etc/nginx/sites-available/isucon-php.conf
+++ b/provisioning/image/files/etc/nginx/sites-available/isucon-php.conf
@@ -5,11 +5,12 @@ server {
     root /home/isucon/private_isu/webapp/public;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri /index.php$is_args$args;
     }
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     location ~ \.php {
+        root /home/isucon/private_isu/webapp/php;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
