--- a/provisioning/image/ansible/04_xbuild.yml
+++ b/provisioning/image/ansible/04_xbuild.yml
@@ -49,3 +49,5 @@
         - php7.0-mysql
         - php7.0-memcached
       tags: php7
+    - name: copy www.conf (php-fpm)
+      copy: src=../files/etc/php/7.0/fpm/pool.d/www.conf dest=/etc/php/7.0/fpm/pool.d/www.conf owner=root mode=644
