Stop php-fpm after install

--- a/provisioning/image/ansible/04_xbuild.yml
+++ b/provisioning/image/ansible/04_xbuild.yml
@@ -51,3 +51,5 @@
       tags: php7
     - name: copy www.conf (php-fpm)
       copy: src=../files/etc/php/7.0/fpm/pool.d/www.conf dest=/etc/php/7.0/fpm/pool.d/www.conf owner=root mode=644
+    - name: stop php-fpm
+      service: name=php7.0-fpm state=stopped enabled=no
