--- a/provisioning/image/files/etc/php/7.0/fpm/pool.d/www.conf
+++ b/provisioning/image/files/etc/php/7.0/fpm/pool.d/www.conf
@@ -20,8 +20,8 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = www-data
-group = www-data
+user = isucon
+group = isucon
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
