--- a/provisioning/image/ansible/07_application.yml
+++ b/provisioning/image/ansible/07_application.yml
@@ -22,7 +22,7 @@
   gather_facts: no
   tasks:
     - name: download composer.phar
-      get_url: url=http://getcomposer.org/composer.phar dest=/home/isucon/private_isu/webapp/php/composer.phar sha256sum=0fac8d873a7a5f09ce3ebea4a570d4c89e3df3e337d3619bee2e19910219cd79 force=1 mode=755
+      get_url: url=http://getcomposer.org/composer.phar dest=/home/isucon/private_isu/webapp/php/composer.phar force=1 mode=755
     - name: composer install
       shell: cd /home/isucon/private_isu/webapp/php; bash -lc "./composer.phar install"
 
