--- a/ansible/roles/bench/tasks/benchmarker.yml
+++ b/ansible/roles/bench/tasks/benchmarker.yml
@@ -6,20 +6,10 @@
        accept_hostkey=yes
   register: benchmarker
 
-- name: go get
-  shell: "go get ./..."
+- name: compile
+  shell: "make"
   args:
     chdir: "{{ gopath }}/src/github.com/catatsuy/private-isu/benchmarker"
-  environment:
-    GOPATH: "{{ gopath }}"
-  when: benchmarker.changed
-
-- name: go install
-  shell: "go install ."
-  args:
-    chdir: "{{ gopath }}/src/github.com/catatsuy/private-isu/benchmarker"
-  environment:
-    GOPATH: "{{ gopath }}"
   when: benchmarker.changed
 
 - name: install unzip command
