--- a/webapp/ruby/Gemfile
+++ b/webapp/ruby/Gemfile
@@ -3,8 +3,8 @@ source "https://rubygems.org"
 
 gem "sinatra"
 gem "sinatra-contrib"
-gem "memcache-client"
 gem "foreman"
 gem "unicorn"
 gem "mysql2"
 gem "rack-flash3"
+gem "dalli"
