--- a/provisioning/image/ansible/05_app.yml
+++ b/provisioning/image/ansible/05_app.yml
@@ -32,3 +32,4 @@
         repo=file:///home/isucon/repos/private_isu.git
         dest=/home/isucon/private_isu
         update=yes
+        force=yes
