--- a/provisioning/image/ansible/00_base.yml
+++ b/provisioning/image/ansible/00_base.yml
@@ -4,31 +4,36 @@
   gather_facts: no
   tasks:
     - copy: src=../files/etc/apt/sources.list dest=/etc/apt/sources.list owner=root mode=644
+    - apt_key: keyserver=keyserver.ubuntu.com id=9D6D8F6BC857C906
+    - apt_key: keyserver=keyserver.ubuntu.com id=AA8E81B4331F7F50
+    - apt_key: keyserver=keyserver.ubuntu.com id=7638D0442B90D010
+    - apt_key: keyserver=keyserver.ubuntu.com id=CBF8D6FD518E17E1
+    - apt: autoclean=yes
     - apt: update_cache=yes
     - apt: upgrade=dist
+    - apt: name=build-essential state=present
     - apt: name=git state=present
     - apt: name=gcc state=present
     - apt: name=patch state=present
     - apt: name=autoconf state=present
     - apt: name=automake state=present
     - apt: name=bison state=present
-    - apt: name=build-essential
     - apt: name=libssl-dev state=present
     - apt: name=libyaml-dev state=present
     - apt: name=libreadline6-dev state=present
     - apt: name=zlib1g-dev state=present
     - apt: name=libncurses5-dev state=present
     - apt: name=libffi-dev state=present
-    - apt: name=libgdbm3 state=present
+    - apt: name=libgdbm5 state=present
     - apt: name=libgdbm-dev state=present
     - apt: name=libmysqlclient-dev state=present
     - apt: name=libpq-dev state=present
     - apt: name=libcurl4-openssl-dev state=present
-    - apt: name=libpng12-0 state=present
-    - apt: name=libpng12-dev state=present
+    - apt: name=libpng16-16
+    - apt: name=libpng-dev state=present
     - apt: name=libmcrypt4 state=present
     - apt: name=libmcrypt-dev state=present
-    - apt: name=libtidy-0.99-0 state=present
+    - apt: name=libtidy5 state=present
     - apt: name=libtidy-dev state=present
     - apt: name=libxml2-dev state=present
     - apt: name=libxslt1-dev state=present
