--- a/provisioning/image/files/etc/php/7.2/fpm/pool.d/www.conf
+++ b/provisioning/image/files/etc/php/7.2/fpm/pool.d/www.conf
@@ -33,6 +33,7 @@ group = isucon
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
+listen = 127.0.0.1:9000
 listen = /run/php/php7.2-fpm.sock
 
 ; Set listen(2) backlog.
