listen = /run/php/php7.2-fpm.sockをコメントアウト

--- a/provisioning/image/files/etc/php/7.2/fpm/pool.d/www.conf
+++ b/provisioning/image/files/etc/php/7.2/fpm/pool.d/www.conf
@@ -34,7 +34,7 @@ group = isucon
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
 listen = 127.0.0.1:9000
-listen = /run/php/php7.2-fpm.sock
+;listen = /run/php/php7.2-fpm.sock
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
