--- a/portal/Gemfile
+++ b/portal/Gemfile
@@ -1,24 +1,23 @@
 source 'https://rubygems.org'
 
-gem 'rails', '4.2.5'
-gem 'sass-rails', '~> 5.0'
-gem 'uglifier', '>= 1.3.0'
-gem 'coffee-rails', '~> 4.1.0'
+gem 'rails', '~>5.0'
+gem 'sass-rails'
+gem 'uglifier'
+gem 'coffee-rails'
 
 gem 'sidekiq'
 
 gem 'jquery-rails'
 gem 'turbolinks'
-gem 'jbuilder', '~> 2.0'
-
+gem 'jbuilder'
 gem 'chartkick'
-gem 'bootstrap-sass', '~> 3.3.6'
-
+gem 'bootstrap-sass'
 gem 'devise'
-gem 'bcrypt', '~> 3.1.7'
-
+gem 'bcrypt'
 # webserver
 gem 'puma'
+
+gem 'mini_racer'
 
 group :production do
   gem 'mysql2'
@@ -30,7 +29,7 @@ group :development, :test do
 end
 
 group :development do
-  gem 'web-console', '~> 2.0'
+  gem 'web-console'
   gem 'spring'
   gem 'capistrano-sidekiq'
   gem 'capistrano-rails'
