Revert "Merge pull request #162 from catatsuy/feature_remove_portal_ansible"
This reverts commit 0e7459623244d254df34fef01d9ac5426bfc63c0, reversing
changes made to 559de86839d24ba217a73f3f0a4e193400dc4da5.

--- a/provisioning/image/ansible/05_app.yml
+++ b/provisioning/image/ansible/05_app.yml
@@ -21,6 +21,10 @@
       file: path=/home/isucon/repos/private_isu.git/ansible state=absent
     - name: clean benchmarker
       file: path=/home/isucon/repos/private_isu.git/benchmarker state=absent
+    - name: clean e2etest
+      file: path=/home/isucon/repos/private_isu.git/e2etest state=absent
+    - name: clean portal
+      file: path=/home/isucon/repos/private_isu.git/portal state=absent
     - name: clean provisioning
       file: path=/home/isucon/repos/private_isu.git/provisioning state=absent
     - name: clean provisioning
