fix typo in ansible playbook

--- a/provisioning/image/ansible/05_app.yml
+++ b/provisioning/image/ansible/05_app.yml
@@ -27,7 +27,7 @@
       file: path=/home/isucon/repos/private_isu.git/portal state=absent
     - name: clean provisioning
       file: path=/home/isucon/repos/private_isu.git/provisioning state=absent
-    - name: clean provisioning
+    - name: clean README.md
       file: path=/home/isucon/repos/private_isu.git/README.md state=absent
     - name: git init
       shell: "cd /home/isucon/repos/private_isu.git/ && git init && git add . && git config --global user.email 'test@example.com' && git config --global user.name 'admin' && git commit -m 'Initial commit'"
