fix to remove unused directories

--- a/provisioning/image/ansible/05_app.yml
+++ b/provisioning/image/ansible/05_app.yml
@@ -17,12 +17,10 @@
         dest=/home/isucon/repos/private_isu.git
     - name: remove .git
       file: path=/home/isucon/repos/private_isu.git/.git state=absent
-    - name: clean ansible
-      file: path=/home/isucon/repos/private_isu.git/ansible state=absent
+    - name: clean ansible_old
+      file: path=/home/isucon/repos/private_isu.git/ansible_old state=absent
     - name: clean benchmarker
       file: path=/home/isucon/repos/private_isu.git/benchmarker state=absent
-    - name: clean e2etest
-      file: path=/home/isucon/repos/private_isu.git/e2etest state=absent
     - name: clean portal
       file: path=/home/isucon/repos/private_isu.git/portal state=absent
     - name: clean provisioning
@@ -39,3 +37,5 @@
         force=yes
     - name: remove .git
       file: path=/home/isucon/private_isu/.git state=absent
+    - name: remove repos
+      file: path=/home/isucon/repos/ state=absent
