--- a/provisioning/bench/ansible/03_userdata.yml
+++ b/provisioning/bench/ansible/03_userdata.yml
@@ -4,4 +4,4 @@
   gather_facts: no
   tasks:
     - name: create userdata
-      unarchive: src=https://github.com/catatsuy/private-isu/releases/download/img/img.zip dest=/home/isucon/private_isu/benchmarker/userdata remote_src=yes
+      unarchive: src=https://github.com/catatsuy/private-isu/releases/download/img/img.zip dest=/home/isucon/private_isu.git/benchmarker/userdata remote_src=yes
