--- a/provisioning/bench/ansible/01_user.yml
+++ b/provisioning/bench/ansible/01_user.yml
@@ -7,5 +7,5 @@
       shell: cp -p /usr/share/zoneinfo/Japan /etc/localtime
     - group: name=wheel
     - user: name=isucon groups=wheel shell=/bin/bash
-#    - copy: src=../files/etc/profile.d/bashrc dest=/home/isucon/.profile owner=isucon mode=755
+    - copy: src=../files/etc/profile.d/bashrc dest=/home/isucon/.profile owner=isucon mode=755
     - lineinfile: dest=/etc/sudoers state=present regexp='^%wheel ALL\=' line='%wheel ALL=(ALL) NOPASSWD:ALL' validate='visudo -cf %s'
