--- a/provisioning/bench/ansible/playbooks.yml
+++ b/provisioning/bench/ansible/playbooks.yml
@@ -1,6 +1,7 @@
 ---
 - include: 00_base.yml
 - include: 01_user.yml
-- include: 02_bench.yml
-- include: 03_userdata.yml
-- include: 04_build.yml
+- include: 02_xbuild.yml
+- include: 03_bench.yml
+- include: 04_userdata.yml
+- include: 05_build.yml
