--- a/webapp/golang/Dockerfile
+++ b/webapp/golang/Dockerfile
@@ -1,7 +1,7 @@
-FROM golang:1.16
+FROM golang:1.17
 
 RUN mkdir -p /home/webapp
 COPY . /home/webapp
 WORKDIR /home/webapp
-RUN make
+RUN go build -o app
 CMD ./app
