--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - "MYSQL_ROOT_PASSWORD=root"
     volumes:
       - mysql:/var/lib/mysql
-      - ./etc/mysql/conf.d/my.cnf:/etc/my.cnf
+      - ./etc/my.cnf:/etc/my.cnf
       - ./sql:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
