mod ansible for update version

--- a/provisioning/bench/ansible/04_userdata.yml
+++ b/provisioning/bench/ansible/04_userdata.yml
@@ -4,4 +4,5 @@
   gather_facts: no
   tasks:
     - name: create userdata
-      unarchive: src=https://github.com/catatsuy/private-isu/releases/download/img/img.zip dest=/home/isucon/private_isu.git/benchmarker/userdata remote_src=yes
+      tags: userdata
+      ansible.builtin.unarchive: src=https://github.com/catatsuy/private-isu/releases/download/img/img.zip dest=/home/isucon/private_isu.git/benchmarker/userdata remote_src=yes
