--- a/provisioning/image/ansible/05_app.yml
+++ b/provisioning/image/ansible/05_app.yml
@@ -27,6 +27,8 @@
       file: path=/home/isucon/repos/private_isu.git/provisioning state=absent
     - name: clean README.md
       file: path=/home/isucon/repos/private_isu.git/README.md state=absent
+    - name: clean Vagrantfile
+      file: path=/home/isucon/repos/private_isu.git/Vagrantfile state=absent
     - name: git init
       shell: "cd /home/isucon/repos/private_isu.git/ && git init && git add . && git config --global user.email 'test@example.com' && git config --global user.name 'admin' && git commit -m 'Initial commit'"
     - name: create working copy
