--- a/provisioning/image/ansible/playbooks.yml
+++ b/provisioning/image/ansible/playbooks.yml
@@ -1,9 +1,9 @@
 ---
-- include: 00_base.yml
-- include: 01_user.yml
-- include: 02_mysql.yml
-- include: 03_nginx.yml
-- include: 04_xbuild.yml
-- include: 05_app.yml
-- include: 06_createdb.yml
-- include: 07_application.yml
+- import_playbook: 00_base.yml
+- import_playbook: 01_user.yml
+- import_playbook: 02_mysql.yml
+- import_playbook: 03_nginx.yml
+- import_playbook: 04_xbuild.yml
+- import_playbook: 05_app.yml
+- import_playbook: 06_createdb.yml
+- import_playbook: 07_application.yml
