--- a/provisioning/image/ansible/04_xbuild.yml
+++ b/provisioning/image/ansible/04_xbuild.yml
@@ -20,7 +20,7 @@
       tags:
         - nodejs
     # golang
-    - command: /home/isucon/.xbuild/go-install 1.17.7 /home/isucon/.local/go
+    - shell: /home/isucon/.xbuild/go-install 1.17.7 /home/isucon/.local/go $(uname -s | tr [A-Z] [a-z]) $(dpkg --print-architecture)
       args:
         creates: /home/isucon/.local/go/bin/go
 
