--- a/provisioning/image/ansible/08_userdata.yml
+++ b/provisioning/image/ansible/08_userdata.yml
@@ -1,5 +1,12 @@
 - hosts: guests:extras
   become: yes
+  gather_facts: no
+  tasks:
+    - apt: name=unzip state=present
+      when: allinone is defined and allinone
+
+- hosts: guests:extras
+  become: yes
   become_user: isucon
   gather_facts: no
   tasks:
