--- a/provisioning/image/ansible/04_xbuild.yml
+++ b/provisioning/image/ansible/04_xbuild.yml
@@ -26,13 +26,15 @@
 
 - hosts: guests:extras
   become: yes
-  gather_facts: no
+  gather_facts: yes
   tasks:
     - name: Apt update
       apt: update_cache=yes
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "20.04"
       tags: php7
     - name: PHP7 install
       apt: name="{{item}}"
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "20.04"
       with_items:
         - php7.4-cli
         - php7.4-fpm
@@ -41,5 +43,35 @@
       tags: php7
     - name: copy www.conf (php-fpm)
       copy: src=../files/etc/php/7.4/fpm/pool.d/www.conf dest=/etc/php/7.4/fpm/pool.d/www.conf owner=root mode=644
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "20.04"
+      tags: php7
     - name: stop php-fpm
       service: name=php7.4-fpm state=stopped enabled=no
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "20.04"
+      tags: php7
+
+- hosts: guests:extras
+  become: yes
+  gather_facts: yes
+  tasks:
+    - name: Apt update
+      apt: update_cache=yes
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
+      tags: php8
+    - name: PHP8 install
+      apt: name="{{item}}"
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
+      with_items:
+        - php8.1-cli
+        - php8.1-fpm
+        - php8.1-mysql
+        - php-memcached
+      tags: php8
+    - name: copy www.conf (php-fpm)
+      copy: src=../files/etc/php/8.1/fpm/pool.d/www.conf dest=/etc/php/8.1/fpm/pool.d/www.conf owner=root mode=644
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
+      tags: php8
+    - name: stop php-fpm
+      service: name=php8.1-fpm state=stopped enabled=no
+      when: ansible_distribution == "Ubuntu" and ansible_distribution_version == "22.04"
+      tags: php8
