add: simple rust api server

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     cpus: 1
     mem_limit: 1g
     # Go実装の場合は golang/ PHP実装の場合は php/
-    build: ruby/
+    build: rust/
     environment:
       ISUCONP_DB_HOST: mysql
       ISUCONP_DB_PORT: 3306
