features: get initialize

--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -8,3 +8,11 @@ version = "0.1.0"
 [dependencies]
 actix-cors = "0.6.1"
 actix-web = "4.0.1"
+
+sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "mysql", "chrono", "uuid"]}
+
+anyhow = "1.0.57"
+chrono = "0.4.19"
+log = "0.4.17"
+num_cpus = "1.13.1"
+simplelog = "0.12.0"
