--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -10,9 +10,12 @@ actix-cors = "0.6.1"
 actix-web = "4.0.1"
 
 sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "mysql", "chrono", "uuid"]}
+tinytemplate = "1.1"
 
 anyhow = "1.0.57"
 chrono = "0.4.19"
 log = "0.4.17"
 num_cpus = "1.13.1"
+serde = {version = "1.0.137", features = ["derive"]}
+serde_json = "1.0.81"
 simplelog = "0.12.0"
