--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -19,6 +19,7 @@ chrono = {version = "0.4.19", features = ["serde"]}
 derive_more = "0.99.17"
 log = "0.4.17"
 num_cpus = "1.13.1"
+regex = "1"
 serde = {version = "1.0.137", features = ["derive"]}
 serde_json = "1.0.81"
 simplelog = "0.12.0"
