--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -17,8 +17,11 @@ sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "mysql", "ch
 anyhow = "1.0.57"
 chrono = {version = "0.4.19", features = ["serde"]}
 derive_more = "0.99.17"
+duct = "0.13.5"
 log = "0.4.17"
 num_cpus = "1.13.1"
+once_cell = "1.10.0"
+rand = "0.8.5"
 regex = "1"
 serde = {version = "1.0.137", features = ["derive"]}
 serde_json = "1.0.81"
