--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 actix-cors = "0.6.1"
+actix-files = "0.6.0"
 actix-redis = "0.10.0"
 actix-session = "0.5.0"
 actix-web = "4.0.1"
