--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '2.2'
 services:
   nginx:
     image: nginx:1.22
@@ -11,8 +10,6 @@ services:
       - app
 
   app:
-    cpus: 1
-    mem_limit: 1g
     # Go実装の場合は golang/ PHP実装の場合は php/
     build: ruby/
     environment:
@@ -28,10 +25,13 @@ services:
     volumes:
       - ./public:/home/public
     init: true
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1g
 
   mysql:
-    cpus: 1
-    mem_limit: 1g
     image: mysql/mysql-server:8.0
     environment:
       - "TZ=Asia/Tokyo"
@@ -43,6 +43,11 @@ services:
       - ./sql:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1g
 
   memcached:
     image: memcached:1.6
