--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       ISUCONP_DB_PASSWORD: root
       ISUCONP_DB_NAME: isuconp
       ISUCONP_MEMCACHED_ADDRESS: memcached:11211
+      ISUCONP_REDIS_URL: redis:6379
     links:
       - mysql
       - memcached
@@ -29,7 +30,8 @@ services:
       - ./public:/home/public
     init: true
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
 
   mysql:
     cpus: 1
@@ -45,6 +47,12 @@ services:
       - ./sql:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
+    healthcheck:
+      test: mysqladmin ping -h 127.0.0.1 -u$$MYSQL_USER -p$$MYSQL_PASSWORD
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
 
   memcached:
     image: memcached:1.6
