--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -28,4 +28,5 @@ rand = "0.8.5"
 regex = "1.5.6"
 serde = {version = "1.0.137", features = ["derive"]}
 serde_json = "1.0.81"
+serde_qs = "0.9.2"
 simplelog = "0.12.0"
