--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = "1.0.57"
 chrono = {version = "0.4.19", features = ["serde"]}
 derive_more = "0.99.17"
 duct = "0.13.5"
+duct_sh = "0.13.5"
 futures-util = {version = "0.3.21", default-features = false, features = ["std"]}
 log = "0.4.17"
 num_cpus = "1.13.1"
