mod Dockerfile for convenience

--- a/webapp/golang/Dockerfile
+++ b/webapp/golang/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang:1.19
 
 RUN mkdir -p /home/webapp
-COPY . /home/webapp
+COPY go.mod /home/webapp
+COPY go.sum /home/webapp
 WORKDIR /home/webapp
+COPY . /home/webapp
 RUN go build -o app
 CMD ./app
