--- a/webapp/ruby/Dockerfile
+++ b/webapp/ruby/Dockerfile
@@ -1,8 +1,10 @@
 FROM ruby:3.1-buster
 
 RUN mkdir -p /home/webapp
-COPY . /home/webapp
+COPY Gemfile /home/webapp
+COPY Gemfile.lock /home/webapp
 WORKDIR /home/webapp
 RUN bundle config set --local path 'vendor/bundle'
 RUN bundle install
+COPY . /home/webapp
 CMD bundle exec foreman start
