--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -32,9 +32,9 @@ services:
           memory: 1g
 
   mysql:
-    image: mysql/mysql-server:8.0
+    image: mysql:8.0
     environment:
-      - "TZ=Asia/Tokyo"
+      #- "TZ=Asia/Tokyo"
       - "MYSQL_ROOT_HOST=%"
       - "MYSQL_ROOT_PASSWORD=root"
     volumes:
