--- a/provisioning/image/ansible/01_user.yml
+++ b/provisioning/image/ansible/01_user.yml
@@ -8,5 +8,10 @@
       shell: cp -p /usr/share/zoneinfo/Japan /etc/localtime || true
     - group: name=wheel
     - user: name=isucon groups=wheel shell=/bin/bash
+    - name: change the permission for home directory
+      file:
+        path: /home/isucon
+        state: directory
+        mode: '0755'
     - copy: src=../files/etc/profile.d/bashrc dest=/home/isucon/.profile owner=isucon mode=755
     - lineinfile: dest=/etc/sudoers state=present regexp='^%wheel ALL\=' line='%wheel ALL=(ALL) NOPASSWD:ALL' validate='visudo -cf %s'
