--- a/provisioning/image/files/etc/nginx/sites-available/isucon-php.conf
+++ b/provisioning/image/files/etc/nginx/sites-available/isucon-php.conf
@@ -10,11 +10,8 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     location ~ \.php {
-        root /home/isucon/private_isu/webapp/php;
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /home/isucon/private_isu/webapp/php/$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
         fastcgi_pass 127.0.0.1:9000;
