計測の準備

--- a/benchmarker/Makefile
+++ b/benchmarker/Makefile
@@ -2,3 +2,6 @@ all: bin/benchmarker
 
 bin/benchmarker: *.go checker/*.go
 	go build -o bin/benchmarker
+
+bench:
+	./bin/benchmarker -u ./userdata -t http://localhost
