静的ファイルをnginxで配信する

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -20,6 +20,11 @@ server {
 
   access_log /var/log/nginx/access.log json;
 
+  location ~^/(favicon\.ico|css/|js/|img/) {
+    root /public/;
+    expires 1d;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
